[fix] book:category N:M으로 수정